# programming-language-comparison

./: Makefile  README.md  ingress.yaml  package.json  postgres.deployment.yaml
apps/: Makefile
apps/app-root/: Dockerfile  Makefile  deployment.yml  index.js  package.json  pnpm-lock.yaml
apps/csharp/: Dockerfile  Makefile  Program.cs  appsettings.json  deployment.yml  my-api.http
apps/csharp-2/: Dockerfile  Makefile  Program.cs  README.md  api.csproj  appsettings.json  deployment.yml
apps/csharp-3/: Dockerfile  Makefile  Program.cs  deployment.yml  projectfile.prj
apps/csharp-old/: Dockerfile.api  Makefile  README.md  docker-compose-run.yaml
apps/flyway-migrations/: Dockerfile  Makefile  deployment.yml
apps/go/: Makefile  go.mod  go.sum  main.go
apps/go-http-only/: Dockerfile  Makefile  deployment.yml  go.mod  go.sum  main.go
apps/go-http-router/: Dockerfile  Makefile  deployment.yml  go.mod  main.go
apps/js-express-js/: Dockerfile  Makefile  deployment.yml  package.json  pnpm-lock.yaml
apps/py-fastapi/: .python-version  Dockerfile  Makefile  deployment.yml  requirements.txt
apps/py-fastapi-uvicorn/: .python-version  Dockerfile  Makefile  deployment.yml  requirements.txt
apps/rust/: Cargo.toml
apps/rust/src/: main.rs
apps/rust_axum/: .env  Cargo.toml  Dockerfile  Makefile  deployment.yml  dev.sh  docker-compose.yml  kill-server.sh  sqlx-data.json
apps/rust_axum/sql/: create_dbs.sql
apps/rust_axum/src/: main.rs
grafana-templates/: pod-resource-usage.json
load-test/k6/: Makefile  test-report-2.html  (+1 more)
postgresql/: Makefile
(+31 files in other folders)
