[package]
name = "service"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.6.11"
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1.0", features = ["full"] }
serde_json = "1.0.68"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
# sqlx = { version = "0.6", features = ["runtime-tokio-native-tls", "postgres", "uuid", "time"] }
sqlx = { version = "0.6", features = ["runtime-tokio-rustls", "postgres", "macros", "offline", "uuid", "json"] }
dotenv = "0.15.0"

# Axum builds on the types in Tower
tower = "0.4.11"
tower-http = { version = "0.2.0", features = ["trace"] }

[dependencies.uuid]
version = "1.10.0"
features = [
    "v4", # Lets you generate random UUIDs
]

